--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=dev1234
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 server.error.include-stacktrace=never
 api.security.token.secret=${JWT_SECRET:12345678}
