Update PostgreSQL database URL in application.properties

--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost/usuarios_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/usuarios_db
 spring.datasource.username=api-financeira
 spring.datasource.password=dev1234
 
