--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=none
 
 server.error.include-stacktrace=never
 api.security.token.secret=${JWT_SECRET:12345678}
+
+server.port=8080
