--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,28 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:17
-    container_name: postgres-dev
+    container_name: usuarios
     environment:
       POSTGRES_USER: api-financeira
       POSTGRES_PASSWORD: dev1234
-      POSTGRES_DB: api_gestao_financeira
+      POSTGRES_DB: usuarios_db
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_usuarios:/var/lib/postgresql/data
+    restart: unless-stopped
+
+  postgres2:
+    image: postgres:17
+    container_name: transacoes
+    environment:
+      POSTGRES_USER: api-financeira
+      POSTGRES_PASSWORD: dev1234
+      POSTGRES_DB: transacoes_db
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_data_transacoes:/var/lib/postgresql/data
     restart: unless-stopped
 
   pgadmin:
@@ -25,4 +36,5 @@ services:
     restart: unless-stopped
 
 volumes:
-  postgres_data:
+  postgres_data_usuarios:
+  postgres_data_transacoes:
