--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -4,9 +4,12 @@ spring.datasource.password=dev1234
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
 server.error.include-stacktrace=never
 api.security.token.secret=${JWT_SECRET:12345678}
+
+
 
 server.port=8080
