feat leo: checkpoint

--- a/consumer-transaction-service/src/main/resources/application.properties
+++ b/consumer-transaction-service/src/main/resources/application.properties
@@ -3,11 +3,14 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/transacoes_db
 spring.datasource.username=api-financeira
 spring.datasource.password=dev1234
 
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-stacktrace=never
+
+spring.kafka.consumer.group-id=transaction-ms3
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer
 
 server.port=8082
