--- a/producer-transaction-service/src/main/resources/application.properties
+++ b/producer-transaction-service/src/main/resources/application.properties
@@ -10,4 +10,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-stacktrace=never
 
+spring.kafka.bootstrap-servers=localhost:9092
+app.kafka.topics.requested=transaction.requested
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JacksonJsonSerializer
+
+
 server.port=8081
