feat leo: fix code and added ms2, ms3 structured successfully

--- a/consumer-transaction-service/src/main/resources/application.properties
+++ b/consumer-transaction-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=transactionservice
+spring.application.name=consumertransactionservice
 spring.datasource.url=jdbc:postgresql://localhost:5433/transacoes_db
 spring.datasource.username=api-financeira
 spring.datasource.password=dev1234
@@ -9,8 +9,20 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-stacktrace=never
 
+# Kafka consumer
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=transaction-ms3
 spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.key-deserializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JacksonJsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.beca.transactionservice
+spring.kafka.consumer.properties.spring.json.value.default.type=br.com.beca.transactionservice.domain.event.TransactionRequestedEvent
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
+logging.level.org.apache.kafka=INFO
+logging.level.org.springframework.kafka=INFO
+
+
+app.kafka.topics.requested=transaction.requested
+
 
 server.port=8082
