--- a/producer-transaction-service/src/main/resources/application.properties
+++ b/producer-transaction-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=transactionservice
+spring.application.name=producertransactionservice
 spring.datasource.url=jdbc:postgresql://localhost:5433/transacoes_db
 spring.datasource.username=api-financeira
 spring.datasource.password=dev1234
