hoje eu arrumei o import de usuarios, arrumei o mockapi, arrumei o kafka, arrumei o brasil api, fiz a lógica de calculo da taxa de cambio

--- a/consumer-transaction-service/src/main/resources/application.properties
+++ b/consumer-transaction-service/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-stacktrace=never
 
+mockapi.base-url=http://696f956da06046ce61873b76.mockapi.io
+mockapi.resource=/BankAccount
+
 # Kafka consumer
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=transaction-ms3
