--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -9,4 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.error.include-stacktrace=never
 api.security.token.secret=${JWT_SECRET:12345678}
 
+mockapi.base-url=http://696f956da06046ce61873b76.mockapi.io
+mockapi.resource=/BankAccount
+
 server.port=8080
