commit de ontem

--- a/producer-transaction-service/src/main/resources/application.properties
+++ b/producer-transaction-service/src/main/resources/application.properties
@@ -6,9 +6,11 @@ spring.datasource.password=dev1234
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 server.error.include-stacktrace=never
+api.security.token.secret=MINHA_CHAVE_SUPER_SECRETA
+
 
 spring.kafka.bootstrap-servers=localhost:9092
 app.kafka.topics.requested=transaction.requested
