--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 server.error.include-stacktrace=never
-api.security.token.secret=${JWT_SECRET:12345678}
+api.security.token.secret=MINHA_CHAVE_SUPER_SECRETA
+
+spring.jpa.hibernate.ddl-auto=none
 
 mockapi.base-url=http://696f956da06046ce61873b76.mockapi.io
 mockapi.resource=/BankAccount
