--- a/consumer-transaction-service/src/main/resources/application.properties
+++ b/consumer-transaction-service/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=dev1234
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 server.error.include-stacktrace=never
 
